fix(ADA-1084): Color contrast of v7 player icons (#894)
Issue:
menu controls can have very low contrast ratios

Fix:
make the gradient stronger and add a shadow to the icons and the text

Resolves ADA-1084

--- a/src/components/top-bar/_top-bar.scss
+++ b/src/components/top-bar/_top-bar.scss
@@ -1,5 +1,5 @@
 .player .top-bar {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 100%);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
   color: #fff;
   visibility: hidden;
   position: relative;
